--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "NODE_ENV=production node server.js"
 	},
 	"dependencies": {
-		"body-parser": "^1.19.2",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"mongodb": "^4.4.0",
-		"mongoose": "^6.2.2"
+		"mongoose": "^5.12.6"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
